# full-stack-hft-simulator

./: .gitignore  README.md
hft-dashboard/client/: package-lock.json
hft-dashboard/client/src/: App.css  App.jsx  OrderBook.jsx
hft-dashboard/client/src/components/: OrderEntry.jsx
hft-dashboard/server/: package-lock.json  package.json  server.js
hft-simulator/: CMakeLists.txt
hft-simulator/include/: KafkaConsumer.h  KafkaProducer.h  OrderBook.h  datastructures.h
hft-simulator/src/: KafkaConsumer.cpp  KafkaProducer.cpp  OrderBook.cpp  main.cpp
settlement-service/settlement-service/: docker-compose.yml  pom.xml
settlement-service/settlement-service/src/main/java/com/hft/settlementservice/: KafkaConsumerConfig.java  KafkaProducerService.java  OrderBookListener.java  OrderBookStateEntity.java  OrderBookStateRepository.java  SettlementServiceApplication.java  SnapshotRequestListener.java  TradeEntity.java  TradeEvent.java  TradeListener.java  TradeRepository.java
settlement-service/settlement-service/src/main/resources/: application.properties
settlement-service/settlement-service/src/test/java/com/hft/settlementservice/: SettlementServiceApplicationTests.java
